# AiChat

./: .pre-commit-config.yaml  README.md  _typos.toml  ai.rest  cliff.toml  status  test.rest
.github/workflows/: build.yml
chatapp/: index.html  package-lock.json  package.json
chatapp/src/: App.vue  main.js  utils.js
chatapp/src/analytics/: event.js
chatapp/src/components/: AgentList.vue  MemberList.vue  MessageList.vue  MessageSend.vue  Sidebar.vue  WorkspaceInvite.vue
chatapp/src/router/: index.js
chatapp/src/store/: index.js
chatapp/src/views/: Chat.vue  Login.vue  Register.vue
new-chat/: CHANGELOG.md  Cargo.toml  README.md  deny.toml
new-chat/ai_sdk/: Cargo.toml
new-chat/ai_sdk/examples/: ollama.rs
new-chat/ai_sdk/src/: lib.rs
new-chat/ai_sdk/src/adapters/: ollama.rs
new-chat/analytics-server/: Cargo.toml  analytics.yaml  build.rs  init.sql  run.sh  stop.sh
new-chat/analytics-server/examples/: sender.rs
new-chat/analytics-server/src/: config.rs  error.rs  events.rs  extractors.rs  handlers.rs  lib.rs  main.rs  openapi.rs
new-chat/analytics-server/src/pb/: analytics.rs
new-chat/bot-server/: Cargo.toml  bot.yaml
new-chat/bot-server/src/: config.rs  indexer.rs  notif.rs  server.rs
new-chat/chat_core/: Cargo.toml
new-chat/chat_core/src/: lib.rs
new-chat/chat_core/src/middlewares/: auth.rs  mod.rs
new-chat/chat_core/src/utils/: jwt.rs
new-chat/chat_server/: Cargo.toml  chat.yaml  test.rest
new-chat/chat_server/fixtures/: test.sql
new-chat/chat_server/sql/: init.sql
new-chat/chat_server/src/: agent.rs  config.rs  error.rs  lib.rs  openapi.rs  redis.rs
new-chat/chat_server/src/handlers/: agent.rs  auth.rs  chat.rs  messages.rs  mod.rs  workspace.rs
new-chat/chat_server/src/middlewares/: chat.rs  mod.rs  rate_limit.rs
new-chat/chat_server/src/models/: agent.rs  chat.rs  file.rs  message.rs  mod.rs  user.rs  workspace.rs
new-chat/chat_test/: Cargo.toml  notify.yaml
new-chat/chat_test/tests/: chat.rs
new-chat/migrations/: 20260105103234_agent.sql  20260113021238_agent_adapter.sql  20260212134843_workspace_deleted_notification.sql  20260213115850_workspace_invitations.sql  20260213134153_user_joined_workspace_notification.sql
new-chat/notify_server/: Cargo.toml  notify.yaml
new-chat/notify_server/src/: config.rs  error.rs  lib.rs  main.rs  notif.rs  sse.rs
protos/: messages.proto
swiftide-pgvector/: Cargo.toml
swiftide-pgvector/examples/: indexer.rs  retriever.rs
swiftide-pgvector/src/: lib.rs  persist.rs  retrieve.rs
