[workspace]
members = [
    "ai_sdk",
    "analytics-server",
    "bot-server",
    "chat_core",
    "chat_server",
    "chat_test",
    "notify_server",
]
resolver = "2"

[workspace.dependencies]
anyhow = "1.0.100"
async-trait = "0.1.89"
axum = { version = "0.8.8", features = [
    "multipart",
    "query",
    "tracing",
    # "macros",
] }
axum-extra = { version = "0.12.3", features = ["typed-header", "protobuf"] }
chrono = { version = "0.4.42", features = ["serde"] }
chat_core = { version = "0.1.0", path = "./chat_core" }
chat-server = { version = "0.1.0", path = "./chat_server" }
jwt-simple = "0.12.13"
notify-server = { version = "0.1.0", path = "./notify_server" }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.147"
serde_yaml = "0.9.34"
sqlx = { version = "0.8.6", features = [
    "chrono",
    "postgres",
    "runtime-tokio-rustls",
    "tls-rustls",
] }
swiftide-pgvector = { path = "../swiftide-pgvector" }
thiserror = "2.0.17"
tokio = { version = "1.48.0", features = ["rt", "rt-multi-thread", "macros"] }
tower = "0.5.2"
tower-http = { version = "0.6.8", features = [
    "compression-full",
    "fs",
    "cors",
    "trace",
] }
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.22", features = ["env-filter"] }
utoipa = { version = "5.4.0", features = ["axum_extras", "chrono"] }
utoipa-axum = "0.2.0"
utoipa-rapidoc = { version = "6.0.0", features = ["axum"] }
utoipa-redoc = { version = "6.0.0", features = ["axum"] }
utoipa-scalar = { version = "0.3.0", features = ["axum"] }
utoipa-swagger-ui = { version = "9.0.2", features = ["axum"] }
uuid = { version = "1.19.0", features = ["v7", "serde"] }
