[package]
name = "ai_sdk"
version = "0.1.0"
edition = "2024"
license = "MIT"

[dependencies]
anyhow = { workspace = true }
# 这里单独声明 reqwest，是为了让 Rig 的 Ollama client 使用 native-tls，并跳过系统代理探测。
reqwest = { version = "0.13.1", default-features = false, features = ["json", "native-tls"] }
serde = { workspace = true }

[dev-dependencies]
tokio = { workspace = true }
