[package]
name = "analytics-server"
version = "0.1.0"
edition = "2024"
license = "MIT"

[dependencies]
anyhow = { workspace = true }
async-trait = { workspace = true }
axum = { workspace = true }
axum-extra = { workspace = true }
chat_core = { workspace = true }
chrono = { workspace = true, features = ["serde"] }
clickhouse = { version = "0.14.2", features = ["rustls-tls", "time"] }
futures-util = "0.3.31"
prost = "0.14.3"
prost-types = "0.14.3"
serde = { workspace = true }
serde_json = { workspace = true }
serde_yaml = { workspace = true }
sqlx = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
tower-http = { workspace = true }
tracing = { workspace = true, features = ["log"] }
tracing-subscriber = { workspace = true, features = ["env-filter"] }
utoipa = { workspace = true }
utoipa-axum = { workspace = true }
utoipa-rapidoc = { workspace = true }
utoipa-redoc = { workspace = true }
utoipa-scalar = { workspace = true }
utoipa-swagger-ui = { workspace = true }
uuid = { workspace = true }

[build-dependencies]
anyhow = { workspace = true }
prost-build = "0.14.3"
proto-builder-trait = { version = "0.6.2", features = [
    "prost",
], default-features = false }

[dev-dependencies]
clickhouse = { version = "0.14.2", features = [
    "rustls-tls",
    "time",
    "test-util",
] }
reqwest = { version = "0.13.1", features = ["json"] }
